# tokenizer.py

./: .gitignore  .ruff.toml  Makefile  README.md  pyproject.toml
notebooks/: video_course.ipynb
src/tokenizer/: simple_tokenizer.py  tokenizer.py
