[tool.poetry]
name = "tokenizer"
version = "0.0.1"
description = "A package built following Andrej Karpathy's video 'Let's build the GPT tokenizer. Provides basic functionnalities for building tokenizers."
license = "MIT"
authors = [
    "Paul Wassermann <paul9499@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/PaulWassermann/tokenizer.py"
# documentation = "TODO"

[tool.poetry.dependencies]
python = "^3.11.9"

[tool.poetry.group.quality.dependencies]
pre-commit = "^3.7.1"
pre-commit-hooks = "^4.6.0"
ruff = "^0.5.0"

[tool.poetry.group.test.dependencies]


[tool.poetry.group.docs.dependencies]


[tool.poetry.group.scripts.dependencies]


[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.5"
regex = "^2024.5.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.mansory.api"